Fix promotion spacing

--- a/src/stylesheets/modules/_mod-promotion.scss
+++ b/src/stylesheets/modules/_mod-promotion.scss
@@ -8,7 +8,7 @@ $number-per-row-lg: 5;
   letter-spacing: .4px;
   line-height: 1.22;
   font-family: $os;
-  padding: 70px 0 0;
+  padding: 70px 0 30px;
   margin: 65px 0 50px;
   position: relative;
 
@@ -40,8 +40,8 @@ $number-per-row-lg: 5;
   .promo-item {
     text-align: center;
     margin-top: 20px;
-    margin-bottom: 80px;
-    padding: 0;
+    margin-bottom: 61px;
+    padding: 0 10px;
   }
 
   p {
